style(tooltip): add max-width css variables, fix alignment

--- a/src/components/Tooltip/sgds-tooltip.scss
+++ b/src/components/Tooltip/sgds-tooltip.scss
@@ -1,3 +1,8 @@
 :host {
+  --sgds-tooltip-max-width: 20rem;
   display: inline-block;
+}
+
+.tooltip-inner{
+  max-width: var(--sgds-tooltip-max-width);
 }
